actually compile to Java 17